--- a/6.ioc/package.json
+++ b/6.ioc/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "reflect-metadata": "^0.2.2",
-    "tsconfig-paths": "^4.2.0"
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.5.2"
   }
 }
